# MiniC

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
docs/: architecture.md  roadmap.md  specification.md
docs/design/: lexer.md  parser.md
scripts/: run_tests.py  test_lexer.py  test_parser.py
src/: debug.cpp  debug.h  main.cpp
src/lexer/: lexer.cpp  lexer_tables.cpp
src/lexer/include/: lexer.h  lexer_tables.h  token.h
src/parser/: expressionParser.cpp  parser.cpp  statementParser.cpp  topLevelParser.cpp
src/parser/include/: ast.h  parser.h
tests/lexer/: comments.mc  error_escape_sequence.mc  error_numeric_suffix.mc  error_unterminated_comment.mc  error_unterminated_string.mc  full_program.mc  keywords.mc  literals.mc  operators.mc
tests/parser/: assignment.mc  declarations.mc  empty_expr_stmt.mc  error_empty_primary.mc  error_invalid_for.mc  error_missing_brace.mc  error_missing_identifier.mc  error_missing_paren.mc  error_missing_semicolon.mc  error_premature_eof.mc  expressions.mc  for_empty.mc  for_loop.mc  full_program.mc  function_call.mc  if_else.mc  logical_ops.mc  nested_blocks.mc  nested_if.mc  relational_ops.mc  return_stmt.mc  while_loop.mc
